--- a/youqing.html
+++ b/youqing.html
@@ -166,10 +166,10 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
   <div class="content">
     <h2>友情链接</h2>
     <div>
-      <p><a href="https://rulinhuang956.github.io"><img src="huangge.jpg" width="200" height="64"></a></p>
+      <p><a href="https://rulinhuang956.github.io"><img src="https://rulinhuang956.github.io/logo.jpg" width="200" height="64"></a></p>
       <p>另名小黄哥的刷机服务，以便宜的刷机服务，专业的操作，深受青睐</p>
     </div>
-<p><img src="https://114514fuckyou.github.io/LXTVweb/evs_lxtv_new.png" alt="LXTV" width="400" height="81"></p>
+<p><img src="../LXTVweb/evs_lxtv_new.png" alt="LXTV" width="400" height="81"></p>
 <p>本网站的视频服务都是灵希电视网托管的</p>
   </div>
   <div class="footer">
