--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <!--
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-	background: #42413C;
+	background: #FFF;
 	margin: 0;
 	padding: 0;
 	color: #000;
