--- a/youqing.html
+++ b/youqing.html
@@ -167,7 +167,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
     <h2>友情链接</h2>
     <div>
       <p><a href="https://rulinhuang956.github.io"><img src="https://rulinhuang956.github.io/logo.jpg" width="200" height="64"></a></p>
-      <p>另名小黄哥的刷机服务，以便宜的刷机服务，专业的操作，深受青睐</p>
+      <p>  此网站是分享刷机案例和刷机服务的网站，我们做这个网站的目的是为了能够大力宣传我本人制作的网站，这也是我第一次制作，可能有不足之处。另外，本人还邀请了某位大佬和我的一位粉丝来跟我一起做刷机咨询与刷机服务哦！由于我本人学习繁忙，所以我可能只能在周末和节假日才能刷机，所以大部分时候都是某位大佬和我的一位粉丝来帮忙解决问题的，再次感谢大家的支持。</p>
     </div>
 <p><img src="../LXTVweb/evs_lxtv_new.png" alt="LXTV" width="400" height="81"></p>
 <p>本网站的视频服务都是灵希电视网托管的</p>
