--- a/down.htm=2.htm
+++ b/down.htm=2.htm
@@ -142,10 +142,6 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
 .ttfback {
 	font-family: "黑体";
 }
-.container .content h2 h2 {
-	font-size: large;
-	color: #00F;
-}
 -->
 </style></head>
 
@@ -173,8 +169,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
       <table width="598" height="105" border="1">
         <tr>
       <td width="92" height="72"><img src="file.gif" width="66" height="87"></td>
-      <td width="490"><h2>长<span class="ttfback">虹 灵希电子定制版 MT6250 16M</span></h2>
-        <p><a href="bin/Changhong_LXEIC_6225.bin">点击下载</a></p></td>
+      <td width="490"><h2>蔡轩昊传奇<span class="ttfback"></span>(视频)</h2>
+        <p><a href="../video/mp4/videoplayback.mp4">点击下载</a> <a href="html/vid01.html">在线播放</a></p></td>
     </tr>
 </table>
 <p>&nbsp;</p>
@@ -182,20 +178,26 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
       <table width="598" height="105" border="1">
         <tr>
           <td width="92" height="72"><img src="file.gif" alt="" width="66" height="87"></td>
-          <td width="490"><h2>至尊宝S206<span class="ttfback"> MT6250 16M</span></h2>
-            <p><a href="bin/ZZBS206.bin">点击下载</a></p></td>
+          <td width="490"><h2>如何安装Java<span class="ttfback"></span>(视频)</h2>
+            <p><a href="bin/ZZBS206.bin">点击下载</a> <a href="html/vid02.html">在线播放</a></p></td>
         </tr>
       </table>
       <p>&nbsp;</p>
-    </div><table width="598" height="105" border="1">
-        <tr>
-          <td width="490"><h2>BiliBiliClear</h2><p style="line-height:100%">这是一个可以批量举报B站麦片的程序<br>
-  需py&gt;3.12          支持正版，从我开始<p><a href="bin/ZZBS206.bin">点击转至Github</a></p></td>
-        </tr>
-      </table>
-    <h2>
-      <h2><a href="down.htm=2.htm">下一页</a></h2>
-    </h2>
+    </div>
+<table width="598" height="105" border="1">
+  <tr>
+    <td width="92" height="72"><img src="file.gif" alt="" width="66" height="87"></td>
+    <td width="490"><h2>Beyond-长城<span class="ttfback"></span>(音频)</h2>
+<p><a href="../audio/06 長城.m4a">点击下载</a> <a href="html/aud01.html">在线播放</a></p></td>
+  </tr>
+</table>
+<h2>&nbsp;    </h2>
+<div class="myDiv">
+  <p>&nbsp;</p>
+</div>
+<h2>
+  <h2>&nbsp;</h2>
+</h2>
   </div>
   <div class="sidebar2">
     <h4>超过25M的文件</h4>
