--- a/down.htm=2.htm
+++ b/down.htm=2.htm
@@ -196,7 +196,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
   <p>&nbsp;</p>
 </div>
 <h2>
-  <h2>&nbsp;</h2>
+   <h2><a href="down.htm">上一页</a></h2>
 </h2>
   </div>
   <div class="sidebar2">
