--- a/html/aud01.html
+++ b/html/aud01.html
@@ -39,7 +39,7 @@ function MM_popupMsg(msg) { //v1.0
 <table width="600" height="96" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr> 
   <td width="1" align="left" valign="middle" bgcolor="#999999"><img src="http://www.beijing-2008.org/video/common/images_subdomain/x.gif" width="1" height="1"></td>
-    <td height="110" align="center" valign="middle"><img src="../logo.png=gif320.gif" width="250" height="94" alt="logo"></td>
+    <td height="110" align="center" valign="middle"><a href="../" target="_parent"><img src="../logo.png=gif320.gif" width="250" height="94" alt="logo"></td>
     <td width="1" align="left" valign="middle" bgcolor="#999999"><img src="http://www.beijing-2008.org/video/common/images_subdomain/x.gif" width="1" height="1"></td>
   </tr>
 </tbody></table>
