--- a/down.htm=2.htm
+++ b/down.htm=2.htm
@@ -179,7 +179,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
         <tr>
           <td width="92" height="72"><img src="file.gif" alt="" width="66" height="87"></td>
           <td width="490"><h2>如何安装Java软件<span class="ttfback"></span>(视频)</h2>
-            <p><a href="bin/ZZBS206.bin">点击下载</a> <a href="html/vid02.html">在线播放</a></p></td>
+            <p><a href="../video/mp4/0904.mp4">点击下载</a> <a href="html/vid02.html">在线播放</a></p></td>
         </tr>
       </table>
       <p>&nbsp;</p>
