--- a/html/vid02.html
+++ b/html/vid02.html
@@ -65,7 +65,7 @@ function MM_popupMsg(msg) { //v1.0
         <tr> 
           <td height="27" align="left" valign="top" bgcolor="#EEEEEE"><table width="100%" border="0" cellpadding="4" cellspacing="0" bgcolor="#CCCCCC">
               <tbody><tr> 
-	    <td><div align="center"><span class="highlights">蔡轩昊传奇</span></div></td>
+	    <td><div align="center"><span class="highlights">叫你安装Java文件并启动</span></div></td>
                 <td width="1"> </td>
               </tr>
             </tbody></table></td>
