--- a/down.htm
+++ b/down.htm
@@ -187,6 +187,13 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
         </tr>
       </table>
       <p>&nbsp;</p>
+    </div><table width="598" height="105" border="1">
+        <tr>
+          <td width="490"><h2>Test Video</h2>
+          <p><a href="html/vid03.html">在线播放</a></p></td>
+        </tr>
+      </table>
+    <h2>
       <h2><a href="down.htm=2.htm">下一页</a></h2>
     </h2>
   </div>
