--- a/youqing.html
+++ b/youqing.html
@@ -149,13 +149,13 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
 <body>
 
 <div class="container">
-  <div class="header"><a href="#"><img src="logo400.gif" alt="在此处插入徽标" name="Insert_logo" width="180" height="68" id="Insert_logo" style="background: #C6D580; display:block;" /></a> 
+  <div class="header"><a href="../"><img src="logo400.gif" alt="在此处插入徽标" name="Insert_logo" width="180" height="68" id="Insert_logo" style="background: #C6D580; display:block;" /></a> 
     <!-- end .header --></div>
   <div class="sidebar1">
     <ul class="nav">
       <li><a href="#">主页</a></li>
       <li><a href="#">介绍</a></li>
-      <li><a href="#">下载</a></li>
+      <li><a href="../down.htm">下载</a></li>
       <li><a href="#">产品</a></li>
       <li><a href="#">购买</a></li>
       <li><a href="lianxi.html">联系我们</a></li>
