--- a/down.htm=2.htm
+++ b/down.htm=2.htm
@@ -198,6 +198,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
 <h2>
    <h2><a href="down.htm">上一页</a></h2>
 </h2>
+   <h2><a href="down.htm=3.htm">上一页</a></h2>
   </div>
   <div class="sidebar2">
     <h4>超过25M的文件</h4>
