--- a/html/vid04.html
+++ b/html/vid04.html
@@ -78,7 +78,7 @@ function MM_popupMsg(msg) { //v1.0
             <table width="100%" height="250" border="0" align="center" cellpadding="3" cellspacing="0" table="">
               <tbody><tr align="left" valign="top"> 
                 <td align="center" valign="middle"><video width="640" height="360" controls>
-  <source src="./video/mp4/03.mp4" type="video/mp4">
+  <source src="../../video/mp4/03.mp4" type="video/mp4">
 您的浏览器不支持Video标签。
 </video></td></table>
           </td>
