--- a/down.htm=3.htm
+++ b/down.htm=3.htm
@@ -178,8 +178,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
       <table width="598" height="105" border="1">
         <tr>
           <td width="92" height="72"><img src="file.gif" alt="" width="66" height="87"></td>
-          <td width="490"><h2>如何安装Java<span class="ttfback"></span>(视频)</h2>
-            <p><a href="bin/ZZBS206.bin">点击下载</a> <a href="html/vid02.html">在线播放</a></p></td>
+          <td width="490"><h2>爬我网站视频,开源到github给全世界人免费看</h2>
+            <p><a href="../video/mp4/03.mp4">点击下载</a> <a href="html/vid04.html">在线播放</a></p></td>
         </tr>
       </table>
       <p>&nbsp;</p>
