--- a/index.htm
+++ b/index.htm
@@ -82,7 +82,9 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
 <div class="container">
   <div class="content"><img src="iog.gif" width="960" height="720" alt="log">
   <a href="main.htm"><img src="main.gif" width="120" height="120" alt="main"></a><img src="jieshao.gif" width="120" height="120"><a href="down.htm"><img src="down.gif" width="120" height="120" alt="down"></a><img src="chan.gif" width="120" height="120" alt="chanp"><a href="shop.htm"><img src="shop.gif" width="120" height="120"></a><a href="lianxi.html"><img src="lianxi.gif" width="120" height="120"><a href="youqing.html"><img src="youqing.gif" width="120" height="120"><a href="http://114514fuckyou.github.io/lxeic/"><img src="zhu.gif" width="120" height="120" alt="github"></a>联系地址:惠州市惠城区 QQ:1815296212 e-Mail:xuweiz@outlook.com 版权所有 1986~2024 广东灵希电子工业有限公司</div>
-<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"  src="../audio/autoplay.ogg" type="audio/ogg" > 你的浏览器不支持HTML 5 Audio </audio>
+<audio controls="controls" autoplay="autoplay">
+<source src="../audio/autoplay.ogg" type="audio/ogg" />
+你的浏览器不支持HTML 5 Audio
   <!-- end .container --></div>
 </body>
 </html>
